[gd_scene load_steps=9 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://DottedCircle.gd" type="Script" id=2]
[ext_resource path="res://Rowdies-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://GameConfig.tscn" type="PackedScene" id=4]
[ext_resource path="res://TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://WebRTC/Client/MultiplayerRTCClient.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 76
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 3 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
game_config_path = NodePath("C/V/GameConfig")
connecting_label_path = NodePath("C/V/ConnectingLabel")

[node name="C" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DottedCircles" type="Control" parent="C"]
margin_left = 960.0
margin_top = 540.0
margin_right = 960.0
margin_bottom = 540.0

[node name="DottedCircle" type="Control" parent="C/DottedCircles"]
margin_right = 40.0
margin_bottom = 40.0
rect_rotation = 105959.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
dash_size = 20.0
dash_gap = 50.0
radius = 500.0
rotation_speed = 10.0

[node name="DottedCircle2" type="Control" parent="C/DottedCircles"]
margin_right = 40.0
margin_bottom = 40.0
rect_rotation = -94671.2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
dash_size = 300.0
dash_gap = 50.0
radius = 450.0
rotation_speed = -10.0
inner_circle = true
inner_cirlce_color = Color( 0.101961, 0.101961, 0.101961, 1 )

[node name="DottedCircle3" type="Control" parent="C/DottedCircles"]
margin_right = 40.0
margin_bottom = 40.0
rect_rotation = 154387.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
dash_size = 300.0
dash_gap = 100.0
radius = 400.0
width = 4.0
rotation_speed = 15.0
inner_circle = true
inner_cirlce_color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )

[node name="DottedCircle4" type="Control" parent="C/DottedCircles"]
margin_right = 40.0
margin_bottom = 40.0
rect_rotation = -89878.7
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}
dash_size = 5.0
dash_gap = 20.0
radius = 400.0
rotation_speed = -10.0

[node name="V" type="VBoxContainer" parent="C"]
margin_left = 652.0
margin_top = 449.0
margin_right = 1267.0
margin_bottom = 630.0

[node name="Title" type="Label" parent="C/V"]
margin_right = 615.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
text = "Particles Battle"
align = 1

[node name="Credits" type="Label" parent="C/V"]
margin_top = 99.0
margin_right = 615.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.498039, 0.498039, 0.498039, 1 )
text = "A game by creikey"
align = 1

[node name="GameConfig" parent="C/V" instance=ExtResource( 4 )]
visible = false
margin_top = 136.0
margin_bottom = 279.0

[node name="ConnectingLabel" type="Label" parent="C/V"]
margin_top = 136.0
margin_right = 615.0
margin_bottom = 181.0
text = "Connecting..."
align = 1

[node name="DebugButtons" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 525.0
margin_bottom = 182.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostSignalingButton" type="Button" parent="DebugButtons"]
margin_right = 475.0
margin_bottom = 45.0
text = "Host signaling server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectToProdButton" type="Button" parent="DebugButtons"]
margin_top = 49.0
margin_right = 475.0
margin_bottom = 94.0
text = "Connect to Production"

[node name="Client" type="Node" parent="."]
script = ExtResource( 6 )
[connection signal="join" from="C/V/GameConfig" to="." method="_on_GameConfig_join"]
[connection signal="pressed" from="DebugButtons/HostSignalingButton" to="." method="_on_HostSignalingButton_pressed"]
[connection signal="websocket_connected" from="Client" to="." method="_on_Client_websocket_connected"]
